terraform/modules/network-policies/templates/fluentd-to-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fluentd-to-elasticsearch
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: fluentd
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: elasticsearch
    ports:
    - protocol: TCP
      port: 9200
